增加公共登录权限验证模块及登录模块

--- a/web/index.html
+++ b/web/index.html
@@ -51,7 +51,6 @@
 
 <!-- Data picker -->
 <script src="js/plugins/datapicker/bootstrap-datepicker.js"></script>
-
 <script src="js/plugins/moment/moment.min.js" type="text/javascript"></script>
 <script src="js/plugins/datapicker/angular-datepicker.js" type="text/javascript"></script>
 <script src="js/plugins/confirm/angular-confirm.min.js" type="text/javascript"></script>
@@ -72,6 +71,12 @@
 <script src="app/common/translation/translate.ctrl.js"></script>
 <script src="app/common/translation/translation.service.js"></script>
 <script src="app/common/settings/application-settings.service.js"></script>
+
+<!-- Login Module and application secured -->
+<script src="app/common/login/login.ctrl.js"></script>
+<script src="app/common/login/login.service.js"></script>
+<script src="app/common/login/secured-application.directive.js"></script>
+<script src="app/common/login/autherization.service.js"></script>
 
 <!-- Anglar App Script -->
 <script src="app/app.module.js"></script>
