--- a/web/app/user/user.html
+++ b/web/app/user/user.html
@@ -1,15 +1,15 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>c3.js</h2>
+        <h2>User List</h2>
         <ol class="breadcrumb">
             <li>
-                <a href="index.html">Home</a>
+                <a href="../../frontend-seeds/web/index.html">Home</a>
             </li>
             <li>
-                <a>Graphs</a>
+                <a>User</a>
             </li>
             <li class="active">
-                <strong>c3.js</strong>
+                <strong>User List</strong>
             </li>
         </ol>
     </div>
@@ -19,14 +19,33 @@
 </div>
 <div class="wrapper wrapper-content animated fadeInRight">
     <div class="row">
-        <div class="col-lg-12">
-            <div class="text-center m-t-lg">
-                <h1>
-                    {{main.helloText}}
-                </h1>
-                <small>
-                    {{main.descriptionText}}
-                </small>
+        <div class="panel-body" ng-controller="UserController as userCtrl">
+            <div class="ibox float-e-margins">
+                <div class="section-header">
+                    <h5>{{"user.title"| translate}}</h5>
+                </div>
+                <div class="ibox-content">
+                    <table
+                            id="userTable"
+                            datatable=""
+                            dt-options="userCtrl.tableDTOptions"
+                            style="width:100%"
+                            width="100%"
+                            dt-columns="userCtrl.tableDTColumns"
+                            dt-instance="userCtrl.tableDTInstance"
+                            class="table table-striped table-bordered table-hover dataTables-example responsive row-border hover">
+                        <thead>
+                        <tr>
+                            <th>{{"user.uesrId"| translate}}</th>
+                            <th>{{"user.loginName"| translate}}</th>
+                            <th>{{"user.realName"| translate}}</th>
+                            <th>{{"user.email"| translate}}</th>
+                            <th>{{"common.action"| translate}}</th>
+                        </tr>
+                        </thead>
+                    </table>
+
+                </div>
             </div>
         </div>
     </div>
