--- a/web/index.html
+++ b/web/index.html
@@ -49,34 +49,36 @@
 <!-- Custom and plugin javascript -->
 <script src="js/inspinia.js"></script>
 
-<!-- Data picker -->
-<script src="js/plugins/datapicker/bootstrap-datepicker.js"></script>
-<script src="js/plugins/moment/moment.min.js" type="text/javascript"></script>
-<script src="js/plugins/datapicker/angular-datepicker.js" type="text/javascript"></script>
-<script src="js/plugins/confirm/angular-confirm.min.js" type="text/javascript"></script>
-
 <!-- Main Angular scripts-->
 <script src="js/angular/angular.min.js"></script>
 <script src="js/plugins/oclazyload/dist/ocLazyLoad.min.js"></script>
 <script src="js/ui-router/angular-ui-router.min.js"></script>
 <script src="js/bootstrap/ui-bootstrap-tpls-1.1.2.min.js"></script>
 <script src="js/angular-translate/angular-translate.js"></script>
+<script src="js/angular-translate/angular-translate-loader-static-files.js"></script>
+<script src="js/http-auth-interceptor.js"></script>
+
+<!-- Data picker -->
+<script src="js/plugins/datapicker/bootstrap-datepicker.js"></script>
+<script src="js/plugins/moment/moment.min.js" type="text/javascript"></script>
+<script src="js/plugins/datapicker/angular-datepicker.js" type="text/javascript"></script>
+<script src="js/plugins/confirm/angular-confirm.min.js" type="text/javascript"></script>
 
 <!-- App common -->
 <script src="app/common/common.module.js"></script>
-<script src="app/common/common.ctrl.js"></script>
 <script src="app/common/common.config.js"></script>
 <script src="app/common/common.service.js"></script>
 <script src="app/common/communication/server-api.service.js"></script>
-<script src="app/common/translation/translate.ctrl.js"></script>
 <script src="app/common/translation/translation.service.js"></script>
 <script src="app/common/settings/application-settings.service.js"></script>
-
-<!-- Login Module and application secured -->
-<script src="app/common/login/login.ctrl.js"></script>
-<script src="app/common/login/login.service.js"></script>
+<script src="app/common/datatable/data-table-settings.service.js"></script>
 <script src="app/common/login/secured-application.directive.js"></script>
 <script src="app/common/login/autherization.service.js"></script>
+<script src="app/common/login/login.service.js"></script>
+
+<script src="app/common/common.ctrl.js"></script>
+<script src="app/common/translation/translate.ctrl.js"></script>
+<script src="app/common/login/login.ctrl.js"></script>
 
 <!-- Anglar App Script -->
 <script src="app/app.module.js"></script>
