--- a/web/login.html
+++ b/web/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="inspinia" ng-controller="MainCtrl as main">
+<html ng-app="inspinia" ng-controller="loginCtrl as loginCtrl">
 
 <head>
 
@@ -20,15 +20,15 @@
     <!-- Main Inspinia CSS files -->
     <link href="css/plugins/toaster/toaster.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-    <link id="loadBefore" ng-href="css/style.{{main.theme}}.css" rel="stylesheet">
+    <link id="loadBefore" href="css/style.default.css" rel="stylesheet">
 
 
 </head>
 
 <!-- ControllerAs syntax -->
 <!-- Main controller with serveral data used in Inspinia theme on diferent view -->
-<body class="secured-application waiting-for-angular">
-<div id="login-holder" class="middle-box text-center loginscreen  animated fadeInDown">
+<body class="waiting-for-angular">
+<div class="middle-box text-center loginscreen  animated fadeInDown">
     <div>
         <div>
             <h1 class="logo-name">IN+</h1>
@@ -39,20 +39,18 @@
         <p>Login in. To see it in action.</p>
         <form class="m-t" role="form" action="#">
             <div class="form-group">
-                <input type="email" class="form-control" placeholder="Username" required="">
+                <input type="email" class="form-control" ng-model="loginCtrl.user.loginId" placeholder="Username" required="">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" required="">
+                <input type="password" class="form-control" ng-model="loginCtrl.user.password" placeholder="Password" required="">
             </div>
-            <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
+            <button class="btn btn-primary block full-width m-b" ng-click="loginCtrl.login()">Login</button>
         </form>
         <p class="m-t">
             <small>Inspinia web app framework base on Bootstrap 3 &copy; 2014</small>
         </p>
     </div>
 </div>
-<!-- Main view  -->
-<div ui-view></div>
 
 <!-- jQuery and Bootstrap -->
 <script src="js/jquery/jquery-2.1.1.min.js"></script>
@@ -110,7 +108,6 @@
 <script src="app/common/directives/fullscreen-content.directive.js"></script>
 <script src="app/common/directives/star-rating.directive.js"></script>
 <!-- endbuild -->
-
 <script src="js/http-auth-interceptor.js"></script>
 <script src="js/file-loader.js"></script>
 <script src="js/util.js"></script>
@@ -119,5 +116,6 @@
 <script src="app/app.module.js"></script>
 <script src="app/app.ctrl.js"></script>
 <script src="app/app.config.js"></script>
+
 </body>
 </html>
