--- a/web/app/role/role.html
+++ b/web/app/role/role.html
@@ -1,6 +1,6 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>Tree view</h2>
+        <h2>Role</h2>
         <ol class="breadcrumb">
             <li>
                 <a href="index.html">Home</a>
@@ -19,40 +19,25 @@
     </div>
 </div>
 <div class="wrapper wrapper-content animated fadeInRight" ng-controller="RoleController as roleCtrl">
-
-
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-content">
-                    <strong>jsTree / ngJsTree</strong> is jquery plugin, that provides interactive trees. It is absolutely free, open source and distributed under the MIT license. jsTree is easily extendable, themable and configurable, it supports HTML & JSON data sources and AJAX loading.
-                    Get more info on: <a href="http://www.jstree.com/" target="_blank">http://www.jstree.com/</a> and check documentation angular directive <a href="https://github.com/ezraroi/ngJsTree" target="_blank">https://github.com/ezraroi/ngJsTree</a>
+                    <table id="roleTable" datatable="" dt-options="roleCtrl.tableDTOptions"
+                           dt-columns="roleCtrl.tableDTColumns"
+                           dt-instance="roleCtrl.tableDTInstance"
+                           class="table table-striped table-bordered table-hover dataTables-example responsive row-border hover">
+                        <thead>
+                        <tr>
+                            <th style="width:50px;">ID</th>
+                            <th style="width:200px;">{{"role.name"| translate}}</th>
+                            <th style="width:100px;">{{"role.remark"| translate}}</th>
+                            <th style="width:200px;">{{"common.action"| translate}}</th>
+                        </tr>
+                        </thead>
+                    </table>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="ibox float-e-margins">
-                <div class="ibox-title">
-                    <h5>Basic example <small>with custom Font Awesome icons.</small></h5>
-                    <div class="ibox-tools">
-                        <a class="collapse-link">
-                            <i class="fa fa-chevron-up"></i>
-                        </a>
-                        <a class="close-link">
-                            <i class="fa fa-times"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="ibox-content">
-                    <div js-tree="roleCtrl.treeConfig" ng-model="roleCtrl.treeData" tree="roleCtrl.treeInstance"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row" id="roleTable">
-    </div>
-
-
 </div>
