Change the menu UI style

--- a/web/app/user/user.html
+++ b/web/app/user/user.html
@@ -1,15 +1,15 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>User</h2>
+        <h2>{{'user.title' | translate}}</h2>
         <ol class="breadcrumb">
             <li>
-                <a href="index.html">Home</a>
+                <a href="index.html">{{'common.home' | translate}}</a>
             </li>
             <li>
                 <a>Sys</a>
             </li>
             <li class="active">
-                <strong>User</strong>
+                <strong>{{'user.title' | translate}}</strong>
             </li>
         </ol>
     </div>
@@ -29,13 +29,13 @@
                         <thead>
                         <tr>
                             <th style="width:50px;">ID</th>
-                            <th style="width:200px;">{{"patient.name"| translate}}</th>
-                            <th style="width:100px;">{{"patient.birthday"| translate}}</th>
-                            <th style="width:200px;">{{"patient.mrn"| translate}}</th>
-                            <th style="width:100px;">{{"patient.gender"| translate}}</th>
-                            <th style="width:150px;">{{"patient.idType"| translate}}</th>
-                            <th style="width:200px;">{{"patient.idNumber"| translate}}</th>
-                            <th style="width:100px;">{{"patient.action" | translate}}</th>
+                            <th style="width:200px;">{{"user.username"| translate}}</th>
+                            <th style="width:100px;">{{"user.email"| translate}}</th>
+                            <th style="width:200px;">{{"user.mobile"| translate}}</th>
+                            <th style="width:100px;">{{"user.status"| translate}}</th>
+                            <th style="width:150px;">{{"user.createUser"| translate}}</th>
+                            <th style="width:200px;">{{"user.createTime"| translate}}</th>
+                            <th style="width:100px;">{{"user.action" | translate}}</th>
                         </tr>
                         </thead>
                     </table>
