--- a/web/index.html
+++ b/web/index.html
@@ -19,8 +19,9 @@
 
     <!-- Main Inspinia CSS files -->
     <link href="css/plugins/toaster/toaster.css" rel="stylesheet">
+    <link href="css/plugins/laydate/laydate.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-    <link id="loadBefore" ng-href="css/style.{{main.theme}}.css" rel="stylesheet">
+    <link id="loadBefore" ng-href="css/style.default.css" rel="stylesheet">
 
 
 </head>
@@ -70,6 +71,9 @@
 
 <!-- Custom and plugin javascript -->
 <script src="js/inspinia.js"></script>
+
+<!-- laydate plugin -->
+<script src="js/plugins/laydate/laydate.js"></script>
 
 <!-- Main Angular scripts-->
 <script src="js/angular/angular.min.js"></script>
