--- a/web/app/role/role.html
+++ b/web/app/role/role.html
@@ -7,10 +7,10 @@
 
             </li>
             <li>
-                <a>Miscellaneous</a>
+                <a>Sys</a>
             </li>
             <li class="active">
-                <strong>Tree view</strong>
+                <strong>Role</strong>
             </li>
         </ol>
     </div>
@@ -20,8 +20,12 @@
 </div>
 <div class="wrapper wrapper-content animated fadeInRight" ng-controller="RoleController as roleCtrl">
     <div class="row">
-        <div class="col-lg-12">
+
+        <div class="col-md-4">
             <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Role List</h5>
+                </div>
                 <div class="ibox-content">
                     <table id="roleTable" datatable="" dt-options="roleCtrl.tableDTOptions"
                            dt-columns="roleCtrl.tableDTColumns"
@@ -39,5 +43,34 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-md-8">
+            <div class="ibox float-e-margins" ng-show="true">
+                <div class="ibox-title">
+                    <h5>Role Details</h5>
+                </div>
+                <div class="ibox-content">
+                    <div class="tabs-container">
+                        <uib-tabset>
+                            <uib-tab heading="Role with Privilege">
+                                <div class="panel-body">
+                                    <div js-tree="roleCtrl.treeConfig" ng-model="roleCtrl.treeData" tree="treeInstance"
+                                         tree-events="check_node:roleCtrl.getSelectedPrivileges;uncheck_node:roleCtrl.getSelectedPrivileges"></div>
+                                </div>
+                                <div class="panel-footer">
+                                    <button type="submit" class="btn btn-primary" ng-click="roleCtrl.save()">Save</button>
+                                </div>
+                            </uib-tab>
+                            <uib-tab heading="Role with User">
+                                <div class="panel-body">
+                                    <div js-tree="roleCtrl.treeConfig" ng-model="roleCtrl.treeData" tree="roleCtrl.treeInstance"></div>
+                                </div>
+                            </uib-tab>
+                        </uib-tabset>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
