--- a/web/app/user/user-details-popup.html
+++ b/web/app/user/user-details-popup.html
@@ -9,17 +9,17 @@
                 <div class='row'>
                     <div class='col-md-6'>
                         <div class="form-group">
-                            <label class="font-noraml">{{"user.loginName"| translate}}</label>
-                            <input type="text" name="testId"
-                                   class="form-control" data-ng-model="userDetailsPopupCtrl.user.testId"
+                            <label class="font-noraml">{{"user.username"| translate}}</label>
+                            <input type="text" name="username"
+                                   class="form-control" data-ng-model="userDetailsPopupCtrl.user.username"
                                    ng-disabled="userDetailsPopupCtrl.readOnly">
                         </div>
                     </div>
                     <div class='col-md-6'>
                         <div class="form-group">
-                            <label class="font-noraml">{{"user.realName"| translate}}</label>
-                            <input type="text" name="name"
-                                   class="form-control" data-ng-model="userDetailsPopupCtrl.user.name"
+                            <label class="font-noraml">{{"user.email"| translate}}</label>
+                            <input type="email" name="email"
+                                   class="form-control" data-ng-model="userDetailsPopupCtrl.user.email"
                                    ng-disabled="userDetailsPopupCtrl.readOnly">
                         </div>
                     </div>
@@ -27,10 +27,20 @@
                 <div class='row'>
                     <div class='col-md-6'>
                         <div class="form-group">
-                            <label class="font-noraml">{{"user.email"| translate}}</label>
-                            <input type="text" name="gender"
-                                   class="form-control" data-ng-model="userDetailsPopupCtrl.user.gender"
+                            <label class="font-noraml">{{"user.mobile"| translate}}</label>
+                            <input type="text" name="mobile"
+                                   class="form-control" data-ng-model="userDetailsPopupCtrl.user.mobile"
                                    ng-disabled="userDetailsPopupCtrl.readOnly">
+                        </div>
+                    </div>
+                    <div class='col-md-6'>
+                        <div class="form-group">
+                            <label class="font-noraml">{{"user.status"| translate}}</label>
+                            <select class="form-control" name="status"
+                                    data-ng-model="userDetailsPopupCtrl.user.status" ng-disabled="userDetailsPopupCtrl.readOnly">
+                                <option value="Active">Active</option>
+                                <option value="">Disable</option>
+                            </select>
                         </div>
                     </div>
                 </div>
