--- a/web/app/role/role.html
+++ b/web/app/role/role.html
@@ -54,8 +54,7 @@
                         <uib-tabset>
                             <uib-tab heading="Role with Privilege">
                                 <div class="panel-body">
-                                    <div js-tree="roleCtrl.treeConfig" ng-model="roleCtrl.treeData" tree="treeInstance"
-                                         tree-events="check_node:roleCtrl.getSelectedPrivileges;uncheck_node:roleCtrl.getSelectedPrivileges"></div>
+                                    <div js-tree="roleCtrl.treeConfig" ng-model="roleCtrl.treeData" tree="roleCtrl.treeInstance" tree-events="check_node:roleCtrl.getSelectedPrivileges;uncheck_node:roleCtrl.getSelectedPrivileges"></div>
                                 </div>
                                 <div class="panel-footer">
                                     <button type="submit" class="btn btn-primary" ng-click="roleCtrl.save()">Save</button>
