--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
     <link href="css/plugins/toaster/toaster.css" rel="stylesheet">
     <link href="css/plugins/laydate/laydate.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-    <link id="loadBefore" ng-href="css/style.default.css" rel="stylesheet">
+    <link id="loadBefore" ng-href="css/style.{{main.theme}}.css" rel="stylesheet">
 
 
 </head>
