--- a/web/app/module/module.html
+++ b/web/app/module/module.html
@@ -19,13 +19,13 @@
 </div>
 <div class="wrapper wrapper-content animated fadeInRight" ng-controller="ModuleController as moduleCtrl">
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <h5>Module List</h5>
                 </div>
                 <div class="ibox-content">
-                    <table id="menuTable" datatable="" dt-options="moduleCtrl.tableDTOptions"
+                    <table id="moduleTable" datatable="" dt-options="moduleCtrl.tableDTOptions"
                            dt-columns="moduleCtrl.tableDTColumns"
                            dt-instance="moduleCtrl.tableDTInstance"
                            class="table table-striped table-bordered table-hover dataTables-example responsive row-border hover">
@@ -34,26 +34,14 @@
                             <th style="width:50px;">ID</th>
                             <th style="width:200px;">{{"menu.name"| translate}}</th>
                             <th style="width:100px;">{{"menu.parentName"| translate}}</th>
-                            <th style="width:200px;">{{"menu.url"| translate}}</th>
+                            <th style="width:200px;">{{"menu.code"| translate}}</th>
+                            <th style="width:200px;">{{"menu.state"| translate}}</th>
                             <th style="width:150px;">{{"menu.type"| translate}}</th>
                             <th style="width:200px;">{{"menu.icon"| translate}}</th>
-                            <th style="width:100px;">{{"menu.orderNumber" | translate}}</th>
                             <th style="width:100px">Action</th>
                         </tr>
                         </thead>
                     </table>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="ibox float-e-margins">
-                <div class="ibox-title">
-                    <h5>Table with data from $scope - <strong>(The angular way)</strong></h5>
-
-                    <div ibox-tools></div>
-                </div>
-                <div class="ibox-content">
-
                 </div>
             </div>
         </div>
