--- a/web/app/privilege/privilege.html
+++ b/web/app/privilege/privilege.html
@@ -1,12 +1,48 @@
-<div class="wrapper wrapper-content animated fadeInRight">
+<div class="row wrapper border-bottom white-bg page-heading">
+    <div class="col-lg-10">
+        <h2>Menu</h2>
+        <ol class="breadcrumb">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a>Sys</a>
+            </li>
+            <li class="active">
+                <strong>Module</strong>
+            </li>
+        </ol>
+    </div>
+    <div class="col-lg-2">
+
+    </div>
+</div>
+<div class="wrapper wrapper-content animated fadeInRight" ng-controller="PrivilegeController as privilegeCtrl">
     <div class="row">
         <div class="col-lg-12">
-            <div class="text-center m-t-lg">
-                <h1>
-                    Simple example of second view
-                </h1>
-                <small>Configure in config.js as minor state.</small>
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Module List</h5>
+                </div>
+                <div class="ibox-content">
+                    <table id="moduleTable" datatable="" dt-options="privilegeCtrl.tableDTOptions"
+                           dt-columns="privilegeCtrl.tableDTColumns"
+                           dt-instance="privilegeCtrl.tableDTInstance"
+                           class="table table-striped table-bordered table-hover dataTables-example responsive row-border hover">
+                        <thead>
+                        <tr>
+                            <th style="width:50px;">ID</th>
+                            <th style="width:200px;">{{"privilege.name"| translate}}</th>
+                            <th style="width:100px;">{{"privilege.moduleName"| translate}}</th>
+                            <th style="width:200px;">{{"privilege.perms"| translate}}</th>
+                            <th style="width:200px;">{{"privilege.status"| translate}}</th>
+                            <th style="width:100px">Action</th>
+                        </tr>
+                        </thead>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
