--- a/web/app/privilege/privilege.html
+++ b/web/app/privilege/privilege.html
@@ -9,7 +9,7 @@
                 <a>Sys</a>
             </li>
             <li class="active">
-                <strong>Module</strong>
+                <strong>Privilege</strong>
             </li>
         </ol>
     </div>
@@ -22,10 +22,10 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>Module List</h5>
+                    <h5>Privilege List</h5>
                 </div>
                 <div class="ibox-content">
-                    <table id="moduleTable" datatable="" dt-options="privilegeCtrl.tableDTOptions"
+                    <table id="privilegeTable" datatable="" dt-options="privilegeCtrl.tableDTOptions"
                            dt-columns="privilegeCtrl.tableDTColumns"
                            dt-instance="privilegeCtrl.tableDTInstance"
                            class="table table-striped table-bordered table-hover dataTables-example responsive row-border hover">
